Closed Bug 1738026 Opened 3 years ago Closed 3 years ago

[Wayland] Fallback from WR to SW-WR when "About Nightly" is opened

Categories

(Core :: Widget: Gtk, defect)

Firefox 95
Desktop
Linux
defect

Tracking

()

RESOLVED FIXED
95 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox93 --- unaffected
firefox94 --- unaffected
firefox95 --- fixed

People

(Reporter: viktor_jaegerskuepper, Assigned: stransky)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: nightly-community, regression)

Crash Data

Attachments

(1 file)

When I click on "Help -> About Nightly" in the main menu, (Hardware) WebRender falls back to "WebRender (Software)" (as seen in about:support) and I get the following output in the terminal:

[GFX1-]: window is null
[GFX1-]: Failed to create EGLSurface
[GFX1-]: Fallback WR to SW-WR

This is a recent regression, mozregression gave the following result:
Last good revision: 334e3d59d932dd2850dec7c582f32f49b504e450
First bad revision: f632271e9d62ad6b7e90acd52e77d3e02a66980e
Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=334e3d59d932dd2850dec7c582f32f49b504e450&tochange=f632271e9d62ad6b7e90acd52e77d3e02a66980e

This points to bug 1737068.

Firefox under XWayland is not affected, and I don't see any error in the terminal with gfx.webrender.software enabled.

OS: Arch Linux
Graphics: AMD Caicos with Mesa 21.3.0-rc2 (r600 driver)
Gnome/Mutter 40.5

Side note: Bug 1681107 was similar to this one, but for popups.

Regressed by: 1737068

Just to be sure, is this a Wayland only issue?

Flags: needinfo?(viktor_jaegerskuepper)

Yes, it seems so.

Debian Testing, Gnome Wayland, Intel
Reproducible with MOZ_ENABLE_WAYLAND=1 mozregression --launch 2021-10-27 -a about:support
but not with mozregression --launch 2021-10-27 -a about:support

Status: UNCONFIRMED → NEW
Has Regression Range: --- → yes
Has STR: --- → yes
Ever confirmed: true
Flags: needinfo?(viktor_jaegerskuepper)
OS: Unspecified → Linux
Hardware: Unspecified → Desktop

Set release status flags based on info from the regressing bug 1737068

(In reply to Martin Stránský [:stransky] (ni? me) from comment #1)

Just to be sure, is this a Wayland only issue?

Yes, I don't observe this neither under X11 nor XWayland (double-checked with default WebRender and with gfx.webrender.software enabled).

Assignee: nobody → stransky
Status: NEW → ASSIGNED
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/fa78343a890f
[Wayland] Implement EnableRenderingToWindow()/DisableRenderingToWindow() to unify window rendering management, r=emilio
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch
Crash Signature: [@ mozilla::detail::MutexImpl::lock | mozilla::WaylandVsyncSource::WaylandDisplay::FrameCallback]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: