Bug 1738026 [Wayland] Implement EnableRenderingToWindow()/DisableRenderingToWindow() to unify window rendering management, r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D129948